# Mam-Voice-Changer

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
ml-worker/: README.md  pyproject.toml
ml-worker/mam_voice_worker/: __init__.py  audio.py  errors.py  inference.py  main.py  protocol.py  training.py
ml-worker/mam_voice_worker/backends/: __init__.py  base.py  mock.py  seed_vc.py
ml-worker/tests/: test_backend.py  test_protocol.py  test_qualification.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native/: signalsmith_wrapper.cpp
src-tauri/src/: audio.rs  error.rs  lib.rs  main.rs
src-tauri/src/audio/: channel_mapper.rs  controller.rs  device.rs  dropout_concealment.rs  external_route.rs  input_stream.rs  metrics.rs  mod.rs  offline_resampler.rs  output_stream.rs  reliability.rs  ring_buffer.rs  sample_format.rs  stream_config.rs  worker.rs
src-tauri/src/commands/: devices.rs  engine.rs  external_routes.rs  mod.rs  parameters.rs  presets.rs  voice_dataset.rs  voice_lab.rs  voice_model.rs
src-tauri/src/config/: application_settings.rs  mod.rs  presets.rs
src-tauri/src/dsp/: chain.rs  dry_wet.rs  gain.rs  high_pass.rs  limiter.rs  master_limiter.rs  mod.rs  noise_gate.rs  pitch.rs  processor.rs  signalsmith.rs  smoothing.rs  tone.rs  vocal_aging.rs
src-tauri/src/state/: app_state.rs  engine_state.rs  mod.rs  parameter_state.rs
src-tauri/src/voice_dataset/: capture.rs  consent.rs  controller.rs  error.rs  hash.rs  mod.rs  (+9 more)
(+147 files in other folders)
