[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mam-voice-worker"
version = "0.1.0"
description = "Optional isolated local ML worker for Mam Voice Changer"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mam_voice_worker*"]

