[package]
name = "mam-voice-changer"
version = "0.1.0"
description = "A local real-time voice changer"
edition = "2021"

[lib]
name = "mam_voice_changer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
cpal = "0.15"
ringbuf = "0.4"
thiserror = "2"

